Update DataInitializer.java